<resources>
    <string name="app_name">Nonado</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LogIn</string>
    <string name="e_mail">E-mail</string>
    <string name="id">ID</string>
    <string name="password">password</string>
    <string name="signup">회원가입</string>
    <string name="signupcomplete">가입 완료</string>
    <string name="signupRes">Sign up</string>
    <string name="signup_id">ID</string>
    <string name="signup_password">password</string>
    <string name="signup_name">Name</string>
<<<<<<< Updated upstream
    <string name="find_id">Find ID</string>
    <string name="todo">TODO</string>
    <string name="text_login">로그인</string>
    <string name="text_findpw">비밀번호 재설정</string>
    <string name="email">Email</string>
    <string name="send_e_mail">Send E-mail</string>
    <string name="id_text">ID :</string>
    <string name="pw_text">PW :</string>
    <string name="fcm_title">Title</string>
    <string name="fcm_message">Message</string>
    <string name="fcm_imageView">TODO</string>
    <string name="default_notification_channel_id">com.domain.appname.urgent</string>
=======
    <string name="send_email">Send E-mail</string>
    <string name="find_id">Find ID</string>
>>>>>>> Stashed changes
</resources>