<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/fcm_imageView"
            android:padding="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/noti_title"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/fcm_title"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noti_message"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/fcm_message"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>